force-app/main/default/objects/C360_CompanyCompetitor__c.object
<CustomObject>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>C360_Competitor__c</referenceTo>
        <relationshipLabel>Company Competitor</relationshipLabel>
        <relationshipName>Company_Competitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Country</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Company Competitor</relationshipLabel>
        <relationshipName>Company_Competitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_By_BU__c</fullName>
        <description>For Salesforce Adoption Dashboard 
For viewing the User&apos;s BU</description>
        <formula>CreatedBy.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create By BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Company Competitor</relationshipLabel>
        <relationshipName>Company_Competitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_BU__c</fullName>
        <description>For Salesforce Adoption Dashboard 
For viewing the User&apos;s BU</description>
        <formula>LastModifiedBy.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per year</fullName>
                </value>
                <value>
                    <fullName>Per month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>C360_Product__c</referenceTo>
        <relationshipLabel>Company Competitor</relationshipLabel>
        <relationshipName>Company_Competitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitConversion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>C360_UnitConversion__c.Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>C360_UnitConversion__c</referenceTo>
        <relationshipLabel>Company Competitor</relationshipLabel>
        <relationshipName>Company_Competitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Company Competitor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC{0000000}</displayFormat>
        <label>Competitor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>